--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO='mongodb+srv://shreemanvithajinnas82:root@cluster0.ceoffm6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+JWT_SECRET=your_super_secret_key
