--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO='mongodb+srv://shreemanvithajinnas82:root@cluster0.di7pkr5.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 JWT_SECRET=your_super_secret_key
+GEMINI_API_KEY=AIzaSyBh0eTnY1XiotGmp2U8hvl34SDqSZadE3I
